# intel-accelerator-programming

./: .gitignore  README.md
cmake-library/: CMakeLists.txt
cmake-oneapi-sourcing/: CMakeLists.txt
cmake/cmake-executables/: CMakeLists.txt
dpcpp-host-matmul/: matmul.cpp
dpcpp-sycl-math/: matmul.cpp
dpcpp/dpcpp-esimd/: Dockerfile  matmul.cpp
level-zero/l0-initialization/: CMakeLists.txt  Dockerfile  ze_main.cpp
vaapi/01-vaapi-create-surface-using-ocl/: CMakeLists.txt  va_main.cpp
vaapi/01-vaapi-create-surface-using-usm/: README.md  va_main.cpp
vaapi/01-vaapi-create-surface-using-vaCreateImage/: README.md  va_main.cpp
vaapi/01-vaapi-create-surface-using-vaapi/: README.md  va_main.cpp
vaapi/01-vaapi-initialization/: CMakeLists.txt  README.md  va_main.cpp
vaapi/01-vaapi-print-surface/: README.md  va_main.cpp
vaapi/02-vaapi-ffmpeg-decoding/: va_main.cpp
vaapi/03-vaapi-pipeline-CSC-SFC/: WIP.md
vaapi/03-vaapi-pipeline-CSC-VEBox/: WIP.md
vaapi/05-vaapi-interop-usm-dmabuf-vaapi/: README.md  va_main.cpp
vaapi/05-vaapi-interop-vaapi-dmabuf-usm/: README.md  va_main.cpp
vaapi/07-vaapi-interop-ocl-to-vaapi/: WIP.md
